<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <android.support.v7.widget.Toolbar
            android:id="@+id/bed_asign_users_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/bed_asign_users_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingVertical="18dp"
                    android:paddingLeft="8dp"
                    android:text="Asignar usuarios a "
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/bed_asign_users_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">
        </LinearLayout>

    </LinearLayout>


</ScrollView>