<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/modificar"
        android:icon="@drawable/ic_modify"
        android:title="Modificar"/>
    <item android:id="@+id/eliminar"
        android:icon="@drawable/ic_delete"
        android:title="Eliminar"/>
    <item android:id="@+id/asignar_usuarios"
        android:icon="@drawable/ic_assign"
        android:title="Asignar usuarios"/>
</menu>
